# ChangeLog for dev-python/django
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.20 2007/10/27 12:10:14 seemant Exp $

*django-0.96.1 (27 Oct 2007)

  27 Oct 2007; Seemant Kulleen <seemant@gentoo.org> -django-0.96.ebuild,
  +django-0.96.1.ebuild:
  version bump for security fix, as mentioned in bug #197188 by Jan Meier

  27 Sep 2007; Brent Baude <ranger@gentoo.org> django-0.96.ebuild:
  marking django-0.96 ~ppc64 for bug 193965

  05 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org> -django-0.95.1.ebuild:
  Dropped old version.

  04 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org> django-0.95.1.ebuild,
  django-0.96.ebuild:
  Removed use_setuptools sed. Removed setuptools dependency in 0.96.

  24 Apr 2007; Seemant Kulleen <seemant@gentoo.org> django-0.96.ebuild:
  adjust the mysql-python dependency, as 1.2.1_p2 is the minimum allowed
  version. Closes bug #175821 by Jean-Claude Repetto

  25 Mar 2007; Seemant Kulleen <seemant@gentoo.org> django-0.96.ebuild:
  fix the src_test -- thanks to mabi for catching the b0rkedness

*django-0.96 (24 Mar 2007)

  24 Mar 2007; Seemant Kulleen <seemant@gentoo.org> +django-0.96.ebuild:
  version bump to newest release -- how about a zero-day this time

  01 Feb 2007; Seemant Kulleen <seemant@gentoo.org>
  -files/django-0.95-auth_fix.patch,
  -files/django-0.95-compile_messages_fix.patch, -django-0.95-r1.ebuild:
  remove old ebuild

  22 Jan 2007; Seemant Kulleen <seemant@gentoo.org> django-0.95.1.ebuild:
  add back the bash completion, docs install fix and stc_test that Tiziano
  added into -r1

*django-0.95.1 (22 Jan 2007)

  22 Jan 2007; Seemant Kulleen <seemant@gentoo.org> -django-0.95.ebuild,
  +django-0.95.1.ebuild:
  version bump to the official security bump release. will remove 0.95-r1 in a
  couple of days if there are no bug reports

*django-0.95-r1 (21 Jan 2007)

  21 Jan 2007; Tiziano Müller <dev-zero@gentoo.org>