@@ -1,4 +1,4 @@
 DIST Django-0.96.1.tar.gz 1746455 RMD160 1bd8fcceab101f80560bb4aa8a4851c204f3918b SHA1 85270f857ff405983cae9a1ef76dfb3303ca6eec SHA256 4874134e9fc6bd08eb7e451e42038394668895c26b7cc867d4c3fdaf9d711085
 EBUILD django-0.96.1.ebuild 1553 RMD160 5d29763c9a3cda9c39825cd344b951f54358ea92 SHA1 5616761af6514c5b758cb66dc4b27a9fe0a5b2bf SHA256 97d8dcb9f64da5c0fd826a59812bc91c3c253d612c2caee9351ec206b400a5d6
-MISC ChangeLog 3427 RMD160 76f06b7be91a070e16f1d10a6b0efaac56fb6545 SHA1 8a718cdbde944f84330c72623b2ade886927aa07 SHA256 e732ba1ebe05bd9d3706864108aa28dc182596a99fb59134b32a81b13574a7d3
-MISC metadata.xml 299 RMD160 3d8704ab7bd5a6e6f1c503a0f121098b9565aa5b SHA1 6eb4ace4f35255ecb165611f126e131ff020ea1b SHA256 afc8576fd4c38ed4723c15af5d7c07612dc7a9e34b789f3fc48910bf89a57f34
+MISC ChangeLog 3544 RMD160 6370fd5fd31ee749a13e2f659704c7cd46fa255b SHA1 e384c92a6b8dd385e16b96fc8bdfdeb3d9ac9af7 SHA256 b230a8ad404a81a1f69109e2846ed477f69565e36f4fbff00d87a0ed6daa82d3
+MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
