@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/django
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.20 2007/10/27 12:10:14 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.21 2007/12/25 14:50:09 phreak Exp $
+
+  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing seemant from metadata.xml as per #202469.
 
 *django-0.96.1 (27 Oct 2007)
 
